--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -32,4 +32,17 @@ body{
     }
 
     .angular-google-map-container { height: 500px; }
+
+    .drop-box {
+        background: #F8F8F8;
+        border: 5px dashed #DDD;
+        width: 200px;
+        height: 65px;
+        text-align: center;
+        padding-top: 25px;
+        margin: 10px;
+    }
+    .dragover {
+        border: 5px dashed blue;
+    }
 }
