--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -36,13 +36,28 @@ body{
     .drop-box {
         background: #F8F8F8;
         border: 5px dashed #DDD;
-        width: 200px;
-        height: 65px;
+        width: 100%;
+        height: 100px;
         text-align: center;
         padding-top: 25px;
         margin: 10px;
     }
     .dragover {
         border: 5px dashed blue;
+    }
+
+    .my-drop-zone {
+        border: dotted 3px lightgray;
+        height: 100px;
+    }
+
+    canvas {
+        background-color: #f3f3f3;
+        -webkit-box-shadow: 3px 3px 3px 0 #e3e3e3;
+        -moz-box-shadow: 3px 3px 3px 0 #e3e3e3;
+        box-shadow: 3px 3px 3px 0 #e3e3e3;
+        border: 1px solid #c3c3c3;
+        height: 100px;
+        margin: 6px 0 0 6px;
     }
 }
