--- a/client/sass/_custom.scss
+++ b/client/sass/_custom.scss
@@ -4,3 +4,62 @@
     display: none;
   }
 }
+
+.jumbotron {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+.navbar-form{
+    .form-group{
+        margin-left: 10px;
+    }
+    button{
+        margin-left: 5px;
+    }
+}
+
+footer{
+    padding-left: 15px;
+    padding-right: 10px;
+    p {
+        border-top: 1px solid #d7e0e2;
+    }
+}
+
+.toast-top-right{
+    top: 70px;
+}
+
+.toast-success{
+    background-color: #13987e;
+}
+
+.drop-box {
+    background: #F8F8F8;
+    border: 5px dashed #DDD;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    padding-top: 25px;
+    margin: 10px;
+}
+.dragover {
+    border: 5px dashed blue;
+}
+
+.my-drop-zone {
+    border: dotted 3px lightgray;
+    height: 100px;
+}
+
+canvas {
+    background-color: #f3f3f3;
+    -webkit-box-shadow: 3px 3px 3px 0 #e3e3e3;
+    -moz-box-shadow: 3px 3px 3px 0 #e3e3e3;
+    box-shadow: 3px 3px 3px 0 #e3e3e3;
+    border: 1px solid #c3c3c3;
+    height: 100px;
+    margin: 6px 0 0 6px;
+}
+
