--- a/client/sass/_custom.scss
+++ b/client/sass/_custom.scss
@@ -5,6 +5,12 @@
   }
 }
 
+.map {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 10px;
+}
+
 .jumbotron {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -22,9 +28,6 @@
 footer{
     padding-left: 15px;
     padding-right: 10px;
-    p {
-        border-top: 1px solid #d7e0e2;
-    }
 }
 
 .toast-top-right{
