--- a/client/sass/_custom.scss
+++ b/client/sass/_custom.scss
@@ -8,12 +8,15 @@
 .map {
     padding-left: 0px;
     padding-right: 0px;
-    padding-bottom: 10px;
 }
 
-.jumbotron {
-    padding-top: 0px;
-    padding-bottom: 0px;
+.search {
+    padding: 20px;
+    .input-group-addon {
+        background:none;
+        border: none;
+    }
+
 }
 
 .navbar-form{
@@ -25,9 +28,8 @@
     }
 }
 
-footer{
-    padding-left: 15px;
-    padding-right: 10px;
+footer {
+    padding: 40px;
 }
 
 .toast-top-right{
