--- a/client/sass/_custom.scss
+++ b/client/sass/_custom.scss
@@ -68,3 +68,25 @@ canvas {
     margin: 6px 0 0 6px;
 }
 
+.row {
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+     
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.col-md-4 {
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      width:33%;
+}
+
+.contact-box {
+      width:100%;
+      border:none;
+      margin-bottom: 0px;
+}
