--- a/client/sass/_custom.scss
+++ b/client/sass/_custom.scss
@@ -87,6 +87,23 @@ canvas {
 
 .contact-box {
       width:100%;
-      border:none;
-      margin-bottom: 0px;
+      border: 0;
+      /*border: 1px solid #e7eaec;*/
+      /*margin-bottom: 0px;*/
+}
+
+ul, ol {
+  list-style-type: none;
+}
+
+input[type="radio"], input[type="checkbox"] {
+  margin: 6px 0 0 0;
+}
+
+.btn-sub-category {
+  margin-top: 5px;
+}
+
+.steps-indicator {
+  margin-top: 50px;
 }
