SQ-27 #done display operation hour in detail listing page

--- a/client/sass/_custom.scss
+++ b/client/sass/_custom.scss
@@ -142,3 +142,12 @@ button.btn-sub-category:focus {
 .list-group-item > .js-switch {
     float: right;
 }
+
+.label-category {
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.label-published {
+    margin-right: 10px;
+}
